# litebox

./: .gitignore  Cargo.toml  NOTICE.txt  README.md
.faq/: sandboxlibos.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  semver-checks.yml
dev_bench/src/: main.rs
dev_tests/: Cargo.toml
dev_tests/src/: boilerplate.rs  lib.rs  ratchet.rs
litebox/: Cargo.toml
litebox-platform-linux-userland/: Cargo.toml  README.md
litebox-platform-linux-userland/scripts/: _common.sh  tun-setup.sh
litebox-platform-linux-userland/src/: lib.rs
litebox/src/: event.rs  fd.rs  fs.rs  lib.rs  litebox.rs  net.rs  path.rs  pipes.rs  platform.rs  shim.rs  tls.rs
litebox/src/event/: mod.rs  observer.rs  polling.rs  wait.rs
litebox/src/fd/: mod.rs  tests.rs
litebox/src/fs/: devices.rs  errors.rs  in_mem.rs  layered.rs  mod.rs  nine_p.rs  tar_ro.rs  tests.rs
litebox/src/fs/devices/: stdio.rs
litebox/src/mm/: allocator.rs  exception_table.rs  linux.rs  memcpy_fallible_32.S  memcpy_fallible_64.S  mod.rs  tests.rs
litebox/src/net/: errors.rs  local_ports.rs  mod.rs  phy.rs  tests.rs
litebox/src/platform/: mock.rs  mod.rs  page_mgmt.rs  trivial_providers.rs
litebox/src/platform/common_providers/: mod.rs  userspace_pointers.rs
litebox/src/sync/: cgmanifest.json  condvar.rs  futex.rs  lock_tracing.rs  mod.rs  mutex.rs  rwlock.rs
litebox/src/utilities/: anymap.rs  array_index_map.rs  loan_list.rs  mod.rs  rng.rs
litebox/src/utils/: mod.rs  rng.rs
litebox_common_linux/: Cargo.toml
litebox_common_linux/src/: lib.rs  loader.rs  mm.rs
litebox_common_linux/src/errno/: generated.rs  mod.rs
litebox_common_linux/src/signal/: mod.rs  x86.rs  x86_64.rs
litebox_common_optee/: Cargo.toml  README.md
litebox_common_optee/src/: lib.rs  syscall_nr.rs
litebox_platform_linux_kernel/: build.rs
litebox_platform_linux_kernel/src/: lib.rs
litebox_platform_linux_kernel/src/arch/x86/: instructions.rs  mod.rs
litebox_platform_linux_kernel/src/arch/x86/mm/: mod.rs  paging.rs
litebox_platform_linux_kernel/src/host/: mock.rs  mod.rs
litebox_platform_linux_kernel/src/host/snp/: entry.S  ghcb.rs  mod.rs  snp-sandbox.h  snp_impl.rs  vmsa.rs  wrapper.h
litebox_platform_linux_kernel/src/mm/: mod.rs  pgtable.rs  tests.rs
litebox_platform_linux_userland/: Cargo.toml
litebox_platform_linux_userland/scripts/: _common.sh  tun-setup.sh
litebox_platform_linux_userland/src/: lib.rs
litebox_platform_linux_userland/src/syscall_intercept/: mod.rs  systrap.rs
litebox_platform_lvbs/: Cargo.toml
litebox_platform_lvbs/src/: lib.rs  syscall_entry.rs  user_context.rs
litebox_platform_lvbs/src/arch/: mod.rs
litebox_platform_lvbs/src/arch/x86/: gdt.rs  instrs.rs  interrupts.rs  ioport.rs  mod.rs  msr.rs
litebox_platform_lvbs/src/arch/x86/mm/: paging.rs
litebox_platform_lvbs/src/host/: bootparam.rs  linux.rs  lvbs_impl.rs  mock.rs  mod.rs  per_cpu_variables.rs
litebox_platform_lvbs/src/mm/: mod.rs  tests.rs
litebox_platform_lvbs/src/mshv/: heki.rs  hvcall.rs  hvcall_mm.rs  hvcall_vp.rs  mem_integrity.rs  mod.rs  vsm.rs  vsm_intercept.rs  vsm_optee_smc.rs  vtl1_mem_layout.rs  vtl_switch.rs
litebox_platform_multiplex/: Cargo.toml
litebox_platform_multiplex/src/: lib.rs
litebox_platform_windows_userland/: Cargo.toml
litebox_platform_windows_userland/src/: lib.rs
litebox_rtld_audit/: Makefile  rtld_audit.c
litebox_runner_linux_on_windows_userland/: build.rs
litebox_runner_linux_on_windows_userland/src/: lib.rs  main.rs
litebox_runner_linux_on_windows_userland/tests/: loader.rs
litebox_runner_linux_on_windows_userland/tests/common/: mod.rs
litebox_runner_linux_userland/: build.rs
litebox_runner_linux_userland/src/: lib.rs  main.rs
litebox_runner_linux_userland/tests/: cache.rs  efault.c  execve.c  hello.c  loader.rs  run.rs  signal.c  thread.c  thread_exit.c  unix.c
litebox_runner_linux_userland/tests/common/: mod.rs
litebox_runner_linux_userland/tests/net/: tcp_client.c  tcp_server.c
litebox_runner_lvbs/: Cargo.toml
litebox_runner_lvbs/src/: lib.rs  main.rs
litebox_runner_optee_on_linux_userland/src/: lib.rs  main.rs  tests.rs
litebox_runner_optee_on_linux_userland/tests/: loader.rs  run.rs
litebox_runner_snp/src/: entry.S  globals.rs  main.rs
litebox_shim_linux/: Cargo.toml
litebox_shim_linux/src/: channel.rs  lib.rs  stdio.rs  wait.rs
litebox_shim_linux/src/loader/: auxv.rs  elf.rs  mod.rs  stack.rs
litebox_shim_linux/src/syscalls/: epoll.rs  eventfd.rs  file.rs  misc.rs  mm.rs  mod.rs  net.rs  process.rs  tests.rs  unix.rs
litebox_shim_linux/src/syscalls/signal/: mod.rs  x86.rs  x86_64.rs
litebox_shim_optee/: Cargo.toml
litebox_shim_optee/src/: lib.rs
litebox_shim_optee/src/loader/: elf.rs  mod.rs  ta_stack.rs
litebox_shim_optee/src/syscalls/: cryp.rs  ldelf.rs  mm.rs  mod.rs  pta.rs  tee.rs  tests.rs
litebox_syscall_rewriter/: Cargo.toml
litebox_syscall_rewriter/src/: lib.rs  main.rs
litebox_syscall_rewriter/tests/: snapshot_tests.rs
litebox_syscall_rewriter/tests/snapshots/: snapshot_tests__hello-diff.snap
