[package]
name = "litebox_common_optee"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
num_enum = { version = "0.7.3", default-features = false }

[lints]
workspace = true
