[package]
name = "litebox_platform_windows_userland"
version = "0.1.0"
edition = "2024"

[target.'cfg(windows)'.dependencies]
getrandom = "0.3.4"
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux", version = "0.1.0" }

windows-sys = { version = "0.60.2", features = [
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_WindowsProgramming",
] }

[lints]
workspace = true
