[package]
name = "litebox_shim_linux"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
litebox_platform_multiplex = { path = "../litebox_platform_multiplex/", version = "0.1.0" }
once_cell = { version = "1.20.2", default-features = false, features = ["alloc", "race"] }
elf_loader = { version = "0.9.2", features = ["fs"] }
thiserror = { version = "2.0.6", default-features = false }
ringbuf = { version = "0.4.8", default-features = false, features = ["alloc"] }

[features]
unstable-testing = []

[lints]
workspace = true

[dev-dependencies]
litebox_shim_linux = { path = ".", features = ["unstable-testing"] }
